--- a/eduRend.vcxproj
+++ b/eduRend.vcxproj
@@ -171,6 +171,7 @@
     <ClInclude Include="imgui\imstb_truetype.h" />
     <ClInclude Include="lib\stb_image.h" />
     <ClInclude Include="src\buffers.h" />
+    <ClInclude Include="src\cube.h" />
     <ClInclude Include="src\dgpuforcer.h" />
     <ClInclude Include="src\objmodel.h" />
     <ClInclude Include="src\quadmodel.h" />
@@ -198,6 +199,7 @@
     <ClCompile Include="imgui\imgui_tables.cpp" />
     <ClCompile Include="imgui\imgui_widgets.cpp" />
     <ClCompile Include="src\camera.cpp" />
+    <ClCompile Include="src\cube.cpp" />
     <ClCompile Include="src\inputhandler.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\objloader.cpp" />
